Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Watched Subcomponents
JDK
JDK-8165018
Missing memory barrier for PPC64 in Unsafe_GetObjectVolatile
Log In
Resolved
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P3
Fix Version/s:
9
Affects Version/s:
9
Component/s:
hotspot
Labels:
None
Subcomponent:
runtime
Resolved In Build:
b137
Description
Unsafe get_volatile() already contains the memory barrier for "support_IRIW_for_not_multiple_copy_atomic_cpu". The same is needed in Unsafe_GetObjectVolatile.
Attachments
Activity
People
Assignee:
Martin Doerr
Reporter:
Martin Doerr
Votes
:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
2016-08-30 03:02
Updated:
2016-09-22 11:15
Resolved:
2016-09-05 18:53