8165018: Missing memory barrier for PPC64 in Unsafe_GetObjectVolatile

Reviewed-by: kbarrett, dholmes